Add Monaco Editor dependency and refactor preload script; update HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Animotion</title>
   <style>
     html, body {
-      margin: 0; 
-      padding: 0; 
-      height: 100%; 
+      margin: 0;
+      padding: 0;
+      height: 100%;
       overflow: hidden;
       display: flex;
+      background-color: #1e1e1e;
     }
     #editor, #preview {
       flex: 1;
-      border: 1px solid #ccc; 
       box-sizing: border-box;
     }
+    #editor {
+      border-right: 1px solid #333;
+      overflow: auto;
+    }
     #preview {
-      background: #2e2e2e; 
-      display: flex; 
-      flex-direction: column; 
-      align-items: center;
-      justify-content: center;
+      background: #2e2e2e;
+      position: relative;
     }
     #threeCanvas {
       width: 100%;
@@ -35,11 +36,12 @@
   <div id="preview">
     <canvas id="threeCanvas"></canvas>
   </div>
-  <!-- Script references for monaco editor. If not bundling, you can use node_modules path/serve them locally. -->
-  <!-- You may need to copy node_modules/monaco-editor/min/vs to a static folder and reference it properly. -->
-  <!-- For example: <script src="./vs/loader.js"></script> then configure require.config(...) -->
-  
-  <!-- Our main renderer logic -->
+  <!-- Load Three.js from a CDN (or copy three.min.js to your project and update the path) -->
+  <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
+  <!-- Load GSAP from a CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <!-- Load Monaco Editor assets. Ensure you have copied monaco-editor/min/vs to a folder named "vs" -->
+  <script src="./vs/loader.js"></script>
   <script src="renderer.js"></script>
 </body>
 </html>
