--- a/index.html
+++ b/index.html
@@ -140,18 +140,55 @@
       color: #fff;
       border-bottom: 2px solid #0078d4;
     }
+
+    /* Add these styles in the <style> section */
+    .slides-panel {
+      position: relative;
+      width: 200px;
+      background: #252526;
+      border-right: 1px solid #333;
+      display: flex;
+      flex-direction: column;
+      transition: width 0.3s ease;
+    }
+
+    .slides-content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+    }
+
+    .expand-button {
+      position: absolute;
+      top: 10px;
+      right: 0;
+      background: transparent;
+      border: none;
+      color: #ffffff;
+      cursor: pointer;
+      padding: 4px;
+    }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- Replace the slides-panel div with this updated structure -->
     <div class="slides-panel" id="slidesPanel">
-      <div class="slides-header">
-        <span>Slides</span>
-        <button class="collapse-button" id="collapseButton">◀</button>
+      <div class="slides-content" id="slidesContent">
+        <div class="slides-header">
+          <span>Slides</span>
+          <button class="collapse-button" id="collapseButton">◀</button>
+        </div>
+        <div class="slides-list" id="slidesList">
+          <!-- Slide thumbnails will be added here dynamically -->
+        </div>
       </div>
-      <div class="slides-list" id="slidesList">
-        <!-- Slide thumbnails will be added here dynamically -->
-      </div>
+      <button class="expand-button hidden" id="expandButton">▶</button>
     </div>
     
     <div class="editor-section">
