Rename play button to 'Slideshow' and adjust fullscreen behavior for slide playback

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="editor-section">
       <div class="toolbar">
         <button id="addSlideBtn">Add New Slide</button>
-        <button id="playBtn">▶ Play</button>
+        <button id="playBtn">▶ Slideshow</button>
       </div>
       <!-- Add to editor-section after toolbar -->
       <div class="editor-tabs">
