--- a/index.html
+++ b/index.html
@@ -283,6 +283,27 @@
       font-size: 14px;
       width: 100%;
     }
+
+    datalist {
+        max-height: 200px;
+        overflow-y: auto;
+        background: #1e1e1e;
+        border: 1px solid #333;
+        border-radius: 4px;
+        position: absolute;
+        z-index: 1000;
+        width: 100%;
+    }
+
+    datalist option {
+        padding: 8px;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    datalist option:hover {
+        background: #0078d4;
+    }
   </style>
 </head>
 <body>
@@ -324,12 +345,12 @@
             <label for="fontInput">Font Family</label>
             <input type="text" id="fontInput" value="Arial" list="fontList" />
             <datalist id="fontList">
-              <option value="Arial">
+              <!-- <option value="Arial">
               <option value="Helvetica">
               <option value="Times New Roman">
               <option value="Georgia">
               <option value="Courier New">
-              <option value="Monaco">
+              <option value="Monaco"> -->
             </datalist>
           </div>
           
