Remove unnedded code

--- a/index.html
+++ b/index.html
@@ -43,14 +43,7 @@
           <div class="control-group">
             <label for="fontInput">Font Family</label>
             <input type="text" id="fontInput" value="Arial" list="fontList" />
-            <datalist id="fontList">
-              <!-- <option value="Arial">
-              <option value="Helvetica">
-              <option value="Times New Roman">
-              <option value="Georgia">
-              <option value="Courier New">
-              <option value="Monaco"> -->
-            </datalist>
+            <datalist id="fontList"></datalist>
           </div>
           
           <div class="control-group">
