Add Water and Sky objects from Three.js examples to global scope

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     {
       "imports": {
         "three": "./node_modules/three/build/three.module.js",
-        "node_modules/three/examples/jsm": "./node_modules/three/examples/jsm/"
+        "three/addons/": "./node_modules/three/examples/jsm/"
       }
     }
     </script>
