--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
     <div class="app-content">
       <!-- Left panel container with media and slides -->
       <div class="left-panel-container" id="leftPanelContainer">
-        <!-- Left panel header with collapse button -->
+        <!-- Left panel header with sidebar toggle button -->
         <div class="left-panel-header">
-          <span>Project</span>
-          <button class="collapse-button" id="collapseLeftPanelButton">◀</button>
+          <button class="sidebar-toggle" id="sidebarToggle" title="Toggle Panel">
+            <!-- Updated SVGs with nearly identical appearance -->
+            <svg class="collapse-icon" width="16" height="16" viewBox="0 0 16 16">
+              <path fill="currentColor" d="M2 2a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V2zm1 0v12h10V2H3zm7 2v8a.5.5 0 0 0 1 0V4a.5.5 0 0 0-1 0z"/>
+            </svg>
+            <svg class="expand-icon" width="16" height="16" viewBox="0 0 16 16">
+              <path fill="currentColor" d="M2 2a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V2zm1 0v12h10V2H3zm2 4h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 3h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"/>
+            </svg>
+          </button>
         </div>
         
         <!-- Media panel -->
@@ -73,8 +80,6 @@
             <!-- Slide thumbnails will be added here dynamically -->
           </div>
         </div>
-        
-        <button class="expand-button hidden" id="expandLeftPanelButton">▶</button>
       </div>
 
       <div class="main-content">
