--- a/presentation.html
+++ b/presentation.html
@@ -60,6 +60,7 @@
   
   <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
   <script type="module" src="presentation.js"></script>
 </body>
 </html>
