--- a/src/presentation/presentation.html
+++ b/src/presentation/presentation.html
@@ -52,8 +52,8 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "./node_modules/three/build/three.module.js",
-        "three/addons/": "./node_modules/three/examples/jsm/"
+        "three": "../../node_modules/three/build/three.module.js",
+        "three/addons/": "../../node_modules/three/examples/jsm/"
       }
     }
   </script>
@@ -61,6 +61,6 @@
   <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
-  <script type="module" src="presentation.js"></script>
+  <script type="module" src="./presentation.js"></script>
 </body>
 </html>
