--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="main-content">
         <div class="toolbar">
           <button id="toolbarAddSlideBtn">Add New Slide</button>
-          <button id="playBtn">▶ Slideshow</button>
+          <button id="playBtn">▶ Play</button>
         </div>
         
         <div class="editor-preview-container">
