Rename project from Animotion to Studio3 and update related references

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Animotion</title>
+  <title>Studio3</title>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <div class="container">
     <!-- Custom title bar -->
     <div class="title-bar">
-      <div class="title-bar-text">Animotion</div>
+      <div class="title-bar-text">Studio3</div>
       <div class="view-mode-controls">
         <button id="codeOnlyBtn" class="view-mode-btn" title="Code Only">
           <svg width="16" height="16" viewBox="0 0 16 16">
