--- a/src/presentation/presentation.html
+++ b/src/presentation/presentation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Animotion Presentation</title>
+  <title>Studio3 Presentation</title>
   <style>
     html, body {
       margin: 0;
