Add floating toolbar and sidebar icon, turn the bottom properties panel into a right sidebar

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
 
       <div class="main-content">
+        <!-- Floating toolbar -->
         <div class="toolbar">
           <button id="toolbarAddSlideBtn">Add New Slide</button>
           <button id="playBtn">▶ Play</button>
@@ -103,7 +104,7 @@
           
           <div id="preview">
             <canvas id="threeCanvas"></canvas>
-            <!-- Add a bottom pane -->
+            <!-- Converted to right sidebar -->
             <div class="bottom-pane" id="bottomPane">
               <button id="closeBottomPane">×</button>
               <div id="propertyControls">
