Remove responsiveness of slide container, add zoom functionality with button

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="toolbar">
           <button id="toolbarAddSlideBtn">Add New Slide</button>
           <button id="playBtn">▶ Play</button>
+          <button id="zoomBtn">🔍 Zoom</button>
         </div>
         
         <div class="editor-preview-container">
